name:                martin
version:             0.0.0.1
--synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/carlostome/martin
license:             BSD3
license-file:        LICENSE
author:              Renate Eilers, Fabian Thorand, Carlos Tomé & Ferdinand van Walree
--maintainer:          example@example.com
--copyright:           2016 Author name here
--category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AgdaUtil
                       ProofSearch
                       MakeCaseModified
                       Translation
                       SearchTree
                       Strategy
  build-depends:       base >= 4.7 && < 5
                     , Agda
                     , transformers
                     , mtl
                     , containers
                     , deepseq
                     , geniplate-mirror
                     , filepath
                     , lens
  default-language:    Haskell2010

executable martin-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       AgdaInteraction
                       AgdaStrategy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Agda
                     , martin
                     , transformers
                     , mtl
                     , containers
                     , filepath
                     , unordered-containers
                     , optparse-applicative
                     , geniplate-mirror
                     , lens
                     , haskeline
  default-language:    Haskell2010

test-suite martin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , martin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlostome/martin
