name:                martin
version:             0.0.0.1
--synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/carlostome/martin
license:             BSD3
license-file:        LICENSE
author:              Renate Eilers, Fabian Thorand, Carlos Tomé & Ferdinand van Walree
--maintainer:          example@example.com
--copyright:           2016 Author name here
--category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          test-files/*.agda
data-dir:            data

library
  hs-source-dirs:      src
  exposed-modules:     Martin.Agda.Init
                       Martin.Agda.Lens
                       Martin.Agda.MakeCaseModified
                       Martin.Agda.Query
                       Martin.Agda.Transform
                       Martin.Agda.Util
                       Martin.Auto.ProofSearch
                       Martin.Auto.SearchTree
                       Martin.Auto.Translation
                       Martin.Interaction
                       Martin.Strategy
  build-depends:       base >= 4.7 && < 5
                     , Agda
                     , containers
                     , deepseq
                     , filepath
                     , geniplate-mirror
                     , lens
                     , mtl
                     , transformers
                     , validation
  default-language:    Haskell2010

executable martin-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       AgdaStrategy
                       AgdaInteraction
                       AgdaApp
                       Buttons
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Agda
                     , martin
                     , transformers
                     , mtl
                     , containers
                     , filepath
                     , unordered-containers
                     , optparse-applicative
                     , geniplate-mirror
                     , lens
                     , haskeline
                     , validation
                     , brick
                     , vty
  default-language:    Haskell2010

test-suite martin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Agda
                     , directory
                     , filepath
                     , geniplate-mirror
                     , hspec
                     , lens
                     , martin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carlostome/martin
